# synapse

./: .gitignore  CHANGELOG  Cargo.toml  README.md  README.ru.md
benches/: interpreter_bench.rs  serialization_bench.rs
benchmarks/: interpreter_bench.rs  serialization_bench.rs
docs/: edge_types.md  edge_types_ru.md  getting_started.md  getting_started_ru.md  node_types.md  node_types_ru.md
examples/: autograd_demo.rs  fibonacci.rs  file_processing.rs  http_server.rs
src/: ai_api.rs  asg.rs  c_backend.rs  compiler.rs  concurrency.rs  concurrency_async.rs  effects.rs  error.rs  ffi.rs  interpreter.rs  js_backend.rs  lib.rs  llvm_backend.rs  macros.rs  main.rs  modules.rs  node_factories.rs  nodecodes.rs  proof.rs  proof_dsl.rs  proof_smt.rs  syn1.rs  syn1_writer.rs  testing.rs  tests.rs  type_checker.rs  types.rs  wasm_backend.rs
src/ops/: mod.rs  tensor_ops.rs
src/runtime/: diff_tensor.rs  mod.rs
src/tests/: tests.rs
src/tools/: convert_synapse_json.rs  generate_add_print.rs  generate_conditional.rs  generate_empty_synapse.rs  generate_float_sub.rs  generate_gt_if.rs  generate_literal_add.rs  graphviz_exporter.rs  mod.rs
src/tools/vscode_plugin/: README.md  README.ru.md
