[package]
name = "synapse"
version = "0.2.0"
authors = ["Xzdes <xzdes@yandex.com>"]
edition = "2021"
description = "Synapse — AI-friendly programming language with ASG representation."
license = "MIT"
repository = "https://github.com/Xzdes/synapse"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
byteorder = "1.5.0"
criterion = { version = "0.4", optional = true }
log = "0.4"
env_logger = "0.10"

# Backends
inkwell = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
tokio = { version = "1.30", features = ["full"], optional = true }
z3 = { version = "0.11", optional = true }

[features]
default = []
benchmarks = ["criterion"]
llvm_backend = ["inkwell"]
wasm_backend = ["wasm-bindgen"]
async = ["tokio"]
proof = ["z3"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "serialization_bench"
harness = false

[[bench]]
name = "interpreter_bench"
harness = false
