[package]
name = "synapse"
version = "0.2.0"
authors = ["Xzdes <xzdes@yandex.com>"]
edition = "2021"
description = "Synapse — AI-friendly programming language with ASG representation."
license = "MIT"
repository = "https://github.com/Xzdes/synapse"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
byteorder = "1.5.0"
log = "0.4"
env_logger = "0.11.8"
z3 = { version = "0.12.1", optional = true }

# Backends
inkwell = { version = "0.6.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
tokio = { version = "1.30", features = ["full"], optional = true }
criterion = { version = "0.6.0", optional = true }

[features]
default = []
benchmarks = ["criterion"]
llvm_backend = ["inkwell"]
wasm_backend = ["wasm-bindgen"]
async = ["tokio"]
proof = ["z3"]

[dev-dependencies]
# criterion теперь только в dependencies с optional = true

[[bench]]
name = "serialization_bench"
harness = false

[[bench]]
name = "interpreter_bench"
harness = false
