[package]
name = "synapse"
version = "0.1.0"
edition = "2021"
authors = ["Xzdes <xzdes@yandex.com>"]
description = "A foundational toolkit for the Synapse programming language, centered on an Abstract Syntax Graph."
license = "MIT"
repository = "https://github.com/Xzdes/synapse"

[dependencies]
# Зависимости для ядра Synapse
thiserror = "2.0.16"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

# Зависимости, "унаследованные" от Rusty Gradients для нашего дифференцируемого движка
ndarray = "0.16.1" # Используем 0.15 для совместимости с большинством крейтов
ndarray-rand = "0.15.0"
rand = "0.9.2"

# Опциональные зависимости для продвинутых фич
z3 = { version = "0.16.1", optional = true }
inkwell = { version = "0.6.0", optional = true } # Более свежая версия, если понадобится

[features]
default = []
llvm_backend = ["inkwell"]
proofs = ["z3"]

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "serialization_bench"
harness = false

[[bench]]
name = "interpreter_bench"
harness = false